@@ -136,9 +136,9 @@ if ($graph === false) {
 // Generate image and map
 // If image was generated just a few minutes ago, then don't regenerate (it takes long) unless regen checkbox is set
 
-$filename_map = safe_url_extraclean ($config["attachment_store"])."/networkmap_".$layout;
-$filename_img = "attachment/networkmap_".$layout."_".$font_size;
-$filename_dot = safe_url_extraclean ($config["attachment_store"])."/networkmap_".$layout;
+$filename_map = safe_url_extraclean ($config["attachment_store"])."/networkmap_".$filter;
+$filename_img = "attachment/networkmap_".$filter."_".$font_size;
+$filename_dot = safe_url_extraclean ($config["attachment_store"])."/networkmap_".$filter;
 
 
 if ($simple) {
